--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="ai-features.css">
+    <link rel="stylesheet" href="settings.css">
     <meta http-equiv="refresh" content="300">
     
     <!-- Google tag (gtag.js) -->
@@ -37,6 +38,11 @@
     <!-- Microsoft-specific configuration for pinned tiles -->
     <meta name="browserconfig" content="/browserconfig.xml">
 
+<a href="settings.html" class="social-button">
+    <img src="settings-icon.png" alt="Settings" class="social-icon">
+    <span>Settings</span>
+</a>
+    
     <div class="container">
         <!-- Profile Section -->
         <div class="profile-section section">
@@ -448,6 +454,7 @@
 
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
+    <script src="settings.js"></script>
     <body class="dark-mode">
 </body>
 </html>
