--- a/settings.html
+++ b/settings.html
@@ -6,6 +6,7 @@
     <title>Settings - Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="settings.css">
+    <link rel="stylesheet" href="ai-features.css">
 </head>
 <body class="dark-mode">
     <div class="container">
@@ -18,12 +19,13 @@
             <div class="settings-group">
                 <div class="setting-item">
                     <div class="setting-label">
-                        <span class="setting-title">Dark Mode</span>
-                        <span class="setting-description">Switch between light and dark appearance</span>
+                        <span class="setting-title">Appearance</span>
+                        <span class="setting-description">Choose your preferred theme</span>
                     </div>
                     <label class="toggle-switch">
-                        <input type="checkbox" id="darkModeToggle" checked>
+                        <input type="checkbox" id="themeToggle" checked>
                         <span class="toggle-slider"></span>
+                        <span class="toggle-label">Dark Mode</span>
                     </label>
                 </div>
 
@@ -38,8 +40,6 @@
                         <option value="fr">Français</option>
                         <option value="de">Deutsch</option>
                         <option value="it">Italiano</option>
-                        <option value="pt">Português</option>
-                        <option value="ru">Русский</option>
                         <option value="ja">日本語</option>
                         <option value="ko">한국어</option>
                         <option value="zh">中文</option>
@@ -48,12 +48,12 @@
 
                 <div class="setting-item">
                     <div class="setting-label">
-                        <span class="setting-title">Font Size</span>
-                        <span class="setting-description">Adjust the text size</span>
+                        <span class="setting-title">Text Size</span>
+                        <span class="setting-description">Adjust the size of text</span>
                     </div>
                     <div class="font-size-control">
                         <button class="font-size-btn" id="decreaseFont">A-</button>
-                        <span class="font-size-value" id="currentFontSize">16px</span>
+                        <span class="font-size-value" id="currentFontSize">16</span>
                         <button class="font-size-btn" id="increaseFont">A+</button>
                     </div>
                 </div>
@@ -63,6 +63,7 @@
         </div>
     </div>
 
+    <script src="common.js"></script>
     <script src="settings.js"></script>
 </body>
 </html>
