--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
+    <script src="common.js"></script>
     <body class="dark-mode">
 </body>
 </html>
