--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="profile-section section">
             <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
             <div class="username-checkmark">
-                <h1 data-translate="profileTitle">Bus Army Dude</h1>
+                <h1 data-translate="profile">Bus Army Dude</h1>
                 <img src="check.png" alt="Verified" class="verified">
             </div>
             <p data-translate="currentPresident">CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
