--- a/index.html
+++ b/index.html
@@ -185,50 +185,39 @@
         </div>
         
         <!-- Countdown Section -->
-        <section class="countdown-section">
-            <h2 class="countdown-title" data-translate="countdownTitle">Countdown till I get my AFO's!</h2>
-            <div class="countdown-container">
-                <div class="countdown-item">
-                    <div class="flip-clock" id="countdown-days">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
-                    </div>
-                    <div class="countdown-label" data-translate="days">Days</div>
-                </div>
-                
-                <div class="countdown-item">
-                    <div class="flip-clock" id="countdown-hours">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
-                    </div>
-                    <div class="countdown-label" data-translate="hours">Hours</div>
-                </div>
-
-                <div class="countdown-item">
-                    <div class="flip-clock" id="countdown-minutes">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
-                    </div>
-                    <div class="countdown-label" data-translate="minutes">Minutes</div>
-                </div>
-
-                <div class="countdown-item">
-                    <div class="flip-clock" id="countdown-seconds">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
-                    </div>
-                    <div class="countdown-label" data-translate="seconds">Seconds</div>
-                </div>
+       <div class="countdown-section">
+    <h2 class="countdown-title">Countdown to AFO Braces</h2>
+    <div class="countdown-container">
+        <div class="countdown-block">
+            <div class="double-digit">
+                <div class="digit" id="days-tens">0</div>
+                <div class="digit" id="days-ones">0</div>
             </div>
-        </section>
+            <div class="countdown-label">Days</div>
+        </div>
+        <div class="countdown-block">
+            <div class="double-digit">
+                <div class="digit" id="hours-tens">0</div>
+                <div class="digit" id="hours-ones">0</div>
+            </div>
+            <div class="countdown-label">Hours</div>
+        </div>
+        <div class="countdown-block">
+            <div class="double-digit">
+                <div class="digit" id="minutes-tens">0</div>
+                <div class="digit" id="minutes-ones">0</div>
+            </div>
+            <div class="countdown-label">Minutes</div>
+        </div>
+        <div class="countdown-block">
+            <div class="double-digit">
+                <div class="digit" id="seconds-tens">0</div>
+                <div class="digit" id="seconds-ones">0</div>
+            </div>
+            <div class="countdown-label">Seconds</div>
+        </div>
+    </div>
+</div>
 
         <!-- Calendar Section -->
         <div class="calendar-container">
