--- a/index.html
+++ b/index.html
@@ -219,39 +219,39 @@
     </div>
 </div>
 
-        <!-- Calendar Section -->
-        <div class="calendar-container">
-            <div class="calendar-header">
-                <button id="prev-month" data-translate="prevMonth">Previous</button>
-                <div id="month-year"></div>
-                <button id="next-month" data-translate="nextMonth">Next</button>
-            </div>
+       <!-- Calendar Section -->
+<div class="calendar-container">
+    <div class="calendar-header">
+        <button id="prev-month">Previous</button>
+        <div id="month-year"></div>
+        <button id="next-month">Next</button>
+    </div>
 
-            <div class="calendar-days">
-                <div data-translate="sunday">Sun</div>
-                <div data-translate="monday">Mon</div>
-                <div data-translate="tuesday">Tue</div>
-                <div data-translate="wednesday">Wed</div>
-                <div data-translate="thursday">Thu</div>
-                <div data-translate="friday">Fri</div>
-                <div data-translate="saturday">Sat</div>
-            </div>
+    <div class="calendar-days">
+        <div>Sun</div>
+        <div>Mon</div>
+        <div>Tue</div>
+        <div>Wed</div>
+        <div>Thu</div>
+        <div>Fri</div>
+        <div>Sat</div>
+    </div>
 
-            <div id="calendar-grid" class="calendar-grid"></div>
+    <div id="calendar-grid" class="calendar-grid"></div>
+</div>
+
+<!-- Modal for Event Details -->
+<div id="event-modal" class="modal">
+    <div id="event-modal-content">
+        <h2>Event Details</h2>
+        <div class="event-details">
+            <p id="event-title"></p>
+            <p id="event-time"></p>
+            <p id="event-description"></p>
         </div>
-
-        <!-- Modal for Event Details -->
-        <div id="event-modal" class="modal">
-            <div id="event-modal-content">
-                <h2 data-translate="eventDetails">Event Details</h2>
-                <div class="event-details">
-                    <p id="event-title"></p>
-                    <p id="event-time"></p>
-                    <p id="event-description"></p>
-                </div>
-                <button onclick="closeModal()" data-translate="close">Close</button>
-            </div>
-        </div>
+        <button onclick="closeModal()">Close</button>
+    </div>
+</div>
 
         <!-- Tech Section -->
         <div class="tech-section section">
