--- a/index.html
+++ b/index.html
@@ -96,12 +96,6 @@
                 </a>
             </div>
         </div>
-
-        <!-- Cookie Consent Popup -->
-        <div id="cookieConsent" class="cookie-consent">
-            <p data-translate="cookieConsent">This website uses cookies to ensure you get the best experience. <a href="#">Learn more</a></p>
-            <button id="acceptCookies" class="cookie-btn" data-translate="acceptCookies">Accept</button>
-        </div>
         
         <!-- Current President -->        
         <section id="current-president" class="president-section">
@@ -184,35 +178,42 @@
             </div>
         </div>
         
-        <!-- Countdown Section -->
-       <div class="countdown-section">
-    <h2 class="countdown-title">Countdown to AFO Braces</h2>
+        <div class="countdown-section">
+    <h2>Countdown to AFO Braces</h2>
     <div class="countdown-container">
         <div class="countdown-block">
-            <div class="double-digit">
-                <div class="digit" id="days-tens">0</div>
-                <div class="digit" id="days-ones">0</div>
+            <div id="countdown-days" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
             </div>
             <div class="countdown-label">Days</div>
         </div>
         <div class="countdown-block">
-            <div class="double-digit">
-                <div class="digit" id="hours-tens">0</div>
-                <div class="digit" id="hours-ones">0</div>
+            <div id="countdown-hours" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
             </div>
             <div class="countdown-label">Hours</div>
         </div>
         <div class="countdown-block">
-            <div class="double-digit">
-                <div class="digit" id="minutes-tens">0</div>
-                <div class="digit" id="minutes-ones">0</div>
+            <div id="countdown-minutes" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
             </div>
             <div class="countdown-label">Minutes</div>
         </div>
         <div class="countdown-block">
-            <div class="double-digit">
-                <div class="digit" id="seconds-tens">0</div>
-                <div class="digit" id="seconds-ones">0</div>
+            <div id="countdown-seconds" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
             </div>
             <div class="countdown-label">Seconds</div>
         </div>
