--- a/index.html
+++ b/index.html
@@ -177,26 +177,44 @@
                 <a href="https://forms.gle/4n2UyC1JSJobPPpy5" target="_blank" data-translate="feedback">Feedback or Suggestions Form!</a>
             </div>
         </div>
-
         
-      <!-- Countdown Section -->  
-      <div class="countdown-section">
+        <div class="countdown-section">
     <h2>Countdown to AFO Braces</h2>
     <div class="countdown-container">
         <div class="countdown-block">
-            <div id="countdown-days" class="countdown-number">00</div>
+            <div id="countdown-days" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
             <div class="countdown-label">Days</div>
         </div>
         <div class="countdown-block">
-            <div id="countdown-hours" class="countdown-number">00</div>
+            <div id="countdown-hours" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
             <div class="countdown-label">Hours</div>
         </div>
         <div class="countdown-block">
-            <div id="countdown-minutes" class="countdown-number">00</div>
+            <div id="countdown-minutes" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
             <div class="countdown-label">Minutes</div>
         </div>
         <div class="countdown-block">
-            <div id="countdown-seconds" class="countdown-number">00</div>
+            <div id="countdown-seconds" class="flip-clock">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
             <div class="countdown-label">Seconds</div>
         </div>
     </div>
