--- a/index.html
+++ b/index.html
@@ -221,14 +221,16 @@
     </div>
 </div>
         
-      <!-- Calendar Section -->
+     <!-- Calendar Section -->
 <section class="calendar-section">
     <div class="calendar-container">
+        <!-- Calendar Header -->
         <div class="calendar-header">
             <button id="prev-month">Previous</button>
             <div id="month-year"></div>
             <button id="next-month">Next</button>
         </div>
+        <!-- Calendar Days -->
         <div class="calendar-days">
             <div>Sun</div>
             <div>Mon</div>
@@ -238,6 +240,7 @@
             <div>Fri</div>
             <div>Sat</div>
         </div>
+        <!-- Calendar Grid where days will appear -->
         <div id="calendar-grid" class="calendar-grid"></div>
     </div>
 
