--- a/index.html
+++ b/index.html
@@ -40,20 +40,16 @@
 <body class="dark-mode">
     <div class="container">
         <!-- Profile Section -->
-        <div class="profile-section section">
-            <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-            <div class="username-checkmark">
-                <h1 data-translate="profile">Bus Army Dude</h1>
-                <img src="check.png" alt="Verified" class="verified">
-            </div>
-            <p data-translate="currentPresident">CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
-        </div>
-
-        <a href="settings.html" class="social-button">
-            <img src="settings-icon.png" alt="Settings" class="social-icon">
-            <span data-translate="settings">Settings</span>
-        </a>
-    
+<div class="profile-section section">
+    <button class="settings-button" aria-label="Settings"></button>
+    <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+    <div class="username-checkmark">
+        <h1 data-translate="profile">Bus Army Dude</h1>
+        <img src="check.png" alt="Verified" class="verified">
+    </div>
+    <p data-translate="currentPresident">CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
+</div>
+        
         <!-- Social Links Section -->
         <div class="social-links-section">
             <h2 data-translate="connectWithMe">Connect with Me</h2>
