--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
         <!-- Profile Section -->
 <div class="profile-section section">
-    <button class="settings-button" aria-label="Settings"></button>
+    <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
     <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
     <div class="username-checkmark">
         <h1 data-translate="profile">Bus Army Dude</h1>
