--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     </div>
     
     <!-- Back-to-Top Button -->
-    <button id="back-to-top-btn" title="Go to top">↑</button>    
+    <button id="backToTop" class="back-to-top" aria-label="Back to top">↑</button>
     
     <div class="notice-container">
         <div class="copy-protection-message" data-translate="copyProtection">
