--- a/index.html
+++ b/index.html
@@ -216,6 +216,32 @@
         </div>
     </div>
 </div>
+
+<!-- FAQ Section -->
+<div class="section faq-section">
+    <h2>Frequently Asked Questions</h2>
+    <div class="faq-container">
+        <div class="faq-item">
+            <button class="faq-question">
+                What is Bus Army Dude about?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                Bus Army Dude is a platform where I share my social media presence and connect with my community.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">
+                How can I contact you?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                You can reach me through any of the social media platforms linked above.
+            </div>
+        </div>
+    </div>
+</div>
         
         <!-- Tech Section -->
         <div class="tech-section section">
