--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
     <div class="version-info-container">
         <div class="version-info-section">
             <div class="version-header">Version Information</div>
-            <div class="version-number">Version: v1.10.1</div>
-            <div class="build-number">Build: 2025.1.23</div>
-            <div class="device-info">Device: Loading...</div>
-            <div class="update-time">Current Date and Time: 2025-01-27 21:29:16</div>
-            <div class="countdown">Page refreshing in: 5 minutes</div>
+            <div class="version-number">v1.10.1</div>
+            <div class="build-number">2025.1.23</div>
+            <div class="device-info">Loading...</div>
+            <div class="update-time">2025-01-27 21:29:16</div>
+            <div class="countdown">5 minutes</div>
         </div>
     </div>
     
