--- a/settings.html
+++ b/settings.html
@@ -53,13 +53,21 @@
                         <button id="increaseFont" aria-label="Increase font size">A+</button>
                     </div>
                 </div>
+
+                <!-- Reset to Factory Settings -->
+                <div class="setting-item">
+                    <div class="setting-label">
+                        <span class="setting-title">Reset to Factory Settings</span>
+                        <span class="setting-description">Restore all settings to their default values</span>
+                    </div>
+                    <button id="resetSettings" class="reset-button">Reset</button>
+                </div>
             </div>
 
             <a href="index.html" class="back-link" data-translate="settings.backToProfile">← Back to Profile</a>
         </div>
     </div>
 
-    
     <!-- Footer -->
     <footer>
         <div class="footer-content">
