--- a/settings.html
+++ b/settings.html
@@ -30,10 +30,10 @@
 
             <div class="settings-group">
                 <!-- Dark Mode Toggle -->
-                <div class="setting-item">
+                <div class="setting-card">
                     <div class="setting-label">
-                        <span class="setting-title">Dark Mode</span>
-                        <span class="setting-description">Switch between light and dark theme</span>
+                        <h2 class="setting-title">Dark Mode</h2>
+                        <p class="setting-description">Switch between light and dark theme</p>
                     </div>
                     <label class="toggle-switch">
                         <input type="checkbox" id="darkModeToggle" checked>
@@ -42,10 +42,10 @@
                 </div>
 
                 <!-- Font Size -->
-                <div class="setting-item">
+                <div class="setting-card">
                     <div class="setting-label">
-                        <span class="setting-title">Font Size</span>
-                        <span class="setting-description">Adjust text size</span>
+                        <h2 class="setting-title">Font Size</h2>
+                        <p class="setting-description">Adjust text size</p>
                     </div>
                     <div class="font-size-control">
                         <button id="decreaseFont" aria-label="Decrease font size">A-</button>
@@ -55,10 +55,10 @@
                 </div>
 
                 <!-- Background Color Customization -->
-                <div class="setting-item">
+                <div class="setting-card">
                     <div class="setting-label">
-                        <span class="setting-title">Background Color</span>
-                        <span class="setting-description">Choose your preferred background color</span>
+                        <h2 class="setting-title">Background Color</h2>
+                        <p class="setting-description">Choose your preferred background color</p>
                     </div>
                     <select id="backgroundColorSelect">
                         <option value="#ffffff">White</option>
@@ -74,10 +74,10 @@
                 </div>
 
                 <!-- Custom Background Upload -->
-                <div class="setting-item">
+                <div class="setting-card">
                     <div class="setting-label">
-                        <span class="setting-title">Custom Background</span>
-                        <span class="setting-description">Upload a custom background image</span>
+                        <h2 class="setting-title">Custom Background</h2>
+                        <p class="setting-description">Upload a custom background image</p>
                     </div>
                     <input type="file" id="backgroundUploadInput" accept="image/*">
                     <img id="backgroundPreview" class="background-preview" alt="Background Preview">
@@ -85,10 +85,10 @@
                 </div>
 
                 <!-- Reset to Factory Settings -->
-                <div class="setting-item">
+                <div class="setting-card">
                     <div class="setting-label">
-                        <span class="setting-title">Reset to Factory Settings</span>
-                        <span class="setting-description">Restore all settings to their default values</span>
+                        <h2 class="setting-title">Reset to Factory Settings</h2>
+                        <p class="setting-description">Restore all settings to their default values</p>
                     </div>
                     <button id="resetSettings" class="reset-button">Reset</button>
                 </div>
