--- a/settings.html
+++ b/settings.html
@@ -29,38 +29,47 @@
             </div>
 
             <div class="settings-group">
-                <!-- Dark Mode Toggle -->
-                <div class="setting-card">
-                    <div class="setting-label">
-                        <h2 class="setting-title">Dark Mode</h2>
-                        <p class="setting-description">Switch between light and dark theme</p>
-                    </div>
-                    <label class="toggle-switch">
-                        <input type="checkbox" id="darkModeToggle" checked>
-                        <span class="toggle-slider"></span>
-                    </label>
-                </div>
-
-                <!-- Font Size -->
-                <div class="setting-card">
-                    <div class="setting-label">
-                        <h2 class="setting-title">Font Size</h2>
-                        <p class="setting-description">Adjust text size</p>
-                    </div>
-                    <div class="font-size-control">
-                        <button id="decreaseFont" aria-label="Decrease font size">A-</button>
-                        <span id="currentFontSize">16px</span>
-                        <button id="increaseFont" aria-label="Increase font size">A+</button>
+                <!-- Appearance Section -->
+                <div class="settings-subsection">
+                    <h2 class="subsection-title">Appearance</h2>
+                    <div class="setting-card">
+                        <div class="setting-label">
+                            <h3 class="setting-title">Dark Mode</h3>
+                            <p class="setting-description">Switch between light and dark theme</p>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" id="darkModeToggle" checked>
+                            <span class="toggle-slider"></span>
+                        </label>
                     </div>
                 </div>
 
-                <!-- Reset to Factory Settings -->
-                <div class="setting-card">
-                    <div class="setting-label">
-                        <h2 class="setting-title">Reset to Factory Settings</h2>
-                        <p class="setting-description">Restore all settings to their default values</p>
+                <!-- Accessibility Section -->
+                <div class="settings-subsection">
+                    <h2 class="subsection-title">Accessibility</h2>
+                    <div class="setting-card">
+                        <div class="setting-label">
+                            <h3 class="setting-title">Font Size</h3>
+                            <p class="setting-description">Adjust text size</p>
+                        </div>
+                        <div class="font-size-control">
+                            <button id="decreaseFont" aria-label="Decrease font size">A-</button>
+                            <span id="currentFontSize">16px</span>
+                            <button id="increaseFont" aria-label="Increase font size">A+</button>
+                        </div>
                     </div>
-                    <button id="resetSettings" class="reset-button">Reset</button>
+                </div>
+
+                <!-- Danger Zone Section -->
+                <div class="settings-subsection danger-zone">
+                    <h2 class="subsection-title">Danger Zone</h2>
+                    <div class="setting-card">
+                        <div class="setting-label">
+                            <h3 class="setting-title">Reset to Factory Settings</h3>
+                            <p class="setting-description">Restore all settings to their default values</p>
+                        </div>
+                        <button id="resetSettings" class="reset-button">Reset</button>
+                    </div>
                 </div>
             </div>
 
