--- a/settings.html
+++ b/settings.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff"/>
 </head>
-<body class="dark-mode">
+<body class="settings-page dark-mode">
     <div class="container">
         <div class="settings-section section">
             <div class="settings-header">
