--- a/settings.html
+++ b/settings.html
@@ -20,6 +20,17 @@
     <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff"/>
 </head>
+
+     <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-E0RSQS1MS7');
+    </script>
+    
 <body class="settings-page dark-mode">
     <div class="container">
         <div class="settings-section section">
